@@ -156,14 +156,6 @@ Type: text
 # Use infinitive form
 _Description: Configure the Logical Volume Manager
 
-Template: partman-lvm/activevg
-Type: boolean
-Default: true
-# :sl3:
-_Description: Activate existing volume groups?
- ${COUNT} existing volume groups have been found. Please
- indicate whether you want to activate them.
-
 Template: partman-lvm/mainmenu
 Type: select
 Choices-C: ${CHOICES}
