@@ -5,12 +5,10 @@
 # a loop partition table and partition.
 
 . /lib/partman/lib/base.sh
+. /lib/partman/lib/lvm-base.sh
 
 # Avoid warnings from lvm2 tools about open file descriptors
 export LVM_SUPPRESS_FD_WARNINGS=1
-
-log-output -t partman pvscan
-log-output -t partman vgscan
 
 if [ -x /sbin/vgdisplay ]; then
 	vgroups=$(/sbin/vgdisplay 2>/dev/null | grep '^[ ]*VG Name' | \
@@ -26,13 +24,16 @@ for dev in /var/lib/partman/devices/*; do
 	open_dialog PARTITIONS
 	while { read_line num id size type fs path name; [ "$id" ]; }; do
 		if [ "$fs" != free ]; then
-			partitions="$partitions $id"
+			partitions="$partitions $id,$path"
 		fi
 	done
 	close_dialog
 
 	# Check if device/partitions are used for LVM (PV)
-	for id in $partitions; do
+	for part in $partitions; do
+		set -- $(IFS=, && echo $part)
+		id=$1
+		path=$2
 		lvm=
 
 		# If the device is in fact being used for lvm, mark it as such.
@@ -53,6 +54,15 @@ for dev in /var/lib/partman/devices/*; do
 		if [ "$lvm" ]; then
 			mkdir -p $id
 			echo lvm >$id/method
+
+			if ! [ -e $id/locked ]; then
+				vg=$(pv_get_vg $path)
+				for vgs in $vgroups; do
+					if [ "$vg" = "$vgs" ]; then
+						vg_lock_pvs $vg $path
+					fi
+				done
+			fi
 		fi
 	done
 
